--- a/photoPicker/photoPicker.storyboard
+++ b/photoPicker/photoPicker.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--CameraVC-->
+        <!--Photo Picker-->
         <scene sceneID="JUw-bx-cQ5">
             <objects>
-                <viewController id="0b0-Kb-JVo" customClass="PHCameraVC" sceneMemberID="viewController">
+                <viewController id="0b0-Kb-JVo" customClass="photoPicker" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="H20-5G-dzK"/>
                         <viewControllerLayoutGuide type="bottom" id="VmX-7o-yKS"/>
