--- a/photoPicker/photoPicker.storyboard
+++ b/photoPicker/photoPicker.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Photo Picker-->
+        <!--Photo Picker View Controller-->
         <scene sceneID="JUw-bx-cQ5">
             <objects>
-                <viewController id="0b0-Kb-JVo" customClass="photoPicker" sceneMemberID="viewController">
+                <viewController id="0b0-Kb-JVo" customClass="photoPickerViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="H20-5G-dzK"/>
                         <viewControllerLayoutGuide type="bottom" id="VmX-7o-yKS"/>
@@ -21,7 +21,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="camera.png"/>
                                 <connections>
-                                    <action selector="takePicture:" destination="0b0-Kb-JVo" eventType="touchUpInside" id="wr0-rp-ZEO"/>
+                                    <action selector="buttonAction:" destination="0b0-Kb-JVo" eventType="touchUpInside" id="Dvp-ZD-bfv"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -34,7 +34,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="80" height="80"/>
                     <connections>
-                        <outlet property="buttonCamera" destination="7hh-gp-u5s" id="ocn-MP-kJH"/>
+                        <outlet property="buttonCamera" destination="7hh-gp-u5s" id="eyy-TF-qcx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F1H-Z7-vLx" userLabel="First Responder" sceneMemberID="firstResponder"/>
